<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <import type="com.example.shynmcd.converter.IntergerConverter" />

        <variable
            name="playerInfo"
            type="com.example.shynmcd.ui.viewmodel.PlayerUpdateViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/player_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_info"
            android:textAlignment="center"
            android:textSize="30sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/player_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/player_name"
                        android:inputType="textCapWords"
                        android:text="@={playerInfo.infoObservableField.name}"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/team_under"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/team"
                        android:inputType="textPersonName"
                        android:text="@={playerInfo.infoObservableField.team}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/number_six"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sixes"
                        android:inputType="number"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@={IntergerConverter.convertIntToString(playerInfo.infoObservableField.six)}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/number_sixes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@={IntergerConverter.convertIntToString(playerInfo.infoObservableField.four)}"
                        android:hint="@string/number_fours"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/number_wickets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/number_of_wickets"
                        android:inputType="number"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@={IntergerConverter.convertIntToString(playerInfo.infoObservableField.wickets)}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{playerInfo::UpdatePlayer}"
                        android:text="@string/save" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>