<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>
        <variable
            name="playerDetails"
            type="com.example.shynmcd.model.PlayerInfo"/>

        <import type="com.example.shynmcd.converter.IntergerConverter" />
    </data>
    <LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@{playerDetails.name}"
        android:textAllCaps="true"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/sixes"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@{IntergerConverter.convertIntToString(playerDetails.six)}"
            android:gravity="center"
            android:textSize="17sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/fours"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@{IntergerConverter.convertIntToString(playerDetails.four)}"
            android:gravity="center"
            android:textSize="17sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/wickets"
                android:gravity="center"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@{IntergerConverter.convertIntToString(playerDetails.wickets)}"
                android:gravity="center"
                android:textSize="17sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"/>
        </LinearLayout>
</LinearLayout>
</layout>
